--- a/styles/components/map/map-layers.scss
+++ b/styles/components/map/map-layers.scss
@@ -101,6 +101,7 @@
       > .layer-name {
         display: flex;
         align-items: center;
+        max-width: 70%;
 
         > .layer-options-list {
           display: none;
